# CHAT

./: .gitignore  CALLBACK_LEARNING_NOTES.md  CHANGELOG.md  CMakeLists.txt  DATABASE_CONNECTION_POOL_ISSUE_RECORD.md  DEVELOPMENT_ROADMAP.md  INSTALL.md  INTERVIEW_QA.md  LICENSE  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/common/: EnhancedInputValidator.hpp  ErrorCodes.hpp  InputValidator.hpp  Logger.hpp
include/server/db/: CommonconnectionPool.h  Connection.h  ConnectionPoolManager.h  SecureDB.hpp  db.h
include/server/model/: SecureUserModel.hpp  UserModel.hpp  friendModel.hpp  group.hpp  groupModel.hpp  groupUser.hpp  offlineMsgModel.hpp  user.hpp
include/server/redis/: redis.hpp
include/server/security/: PasswordUtils.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/common/: EnhancedInputValidator.cpp  ErrorCodes.cpp  InputValidator.cpp  Logger.cpp
src/server/db/: CommonconnectionPool.cpp  Connection.cpp  ConnectionPoolManager.cpp  SecureDB.cpp  db.cpp
src/server/model/: SecureUserModel.cpp  UserModel.cpp  friendModel.cpp  groupModel.cpp  offlineMsgModel.cpp
src/server/redis/: redis.cpp
src/server/security/: PasswordUtils.cpp
test/: performance_test.cpp  security_test.cpp
tests/: CMakeLists.txt  debug_sql_test.cpp  enhanced_security_test.cpp  run_security_tests.sh  问题解决文档.md
